@@ -5,13 +5,7 @@ import com.android.build.gradle.BaseExtension
 import com.android.build.gradle.LibraryExtension
 import com.android.build.gradle.LibraryPlugin
 import com.android.build.gradle.internal.tasks.factory.dependsOn
-import com.jfrog.bintray.gradle.BintrayExtension
-import com.jfrog.bintray.gradle.BintrayExtension.PackageConfig
-import com.jfrog.bintray.gradle.BintrayExtension.VersionConfig
 import io.gitlab.arturbosch.detekt.Detekt
-import org.jetbrains.kotlin.gradle.plugin.KotlinBasePluginWrapper
-import org.jetbrains.kotlin.gradle.plugin.KotlinPluginWrapper
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
     /**
@@ -50,10 +44,6 @@ val publishToArtifactoryTask = tasks.register<Task>("publishToArtifactory") {
 
 val publishReleaseTaskName = "publishRelease"
 
-val finalProjectVersion: String = System.getProperty("avito.project.version").let { env ->
-    if (env.isNullOrBlank()) projectVersion.get() else env
-}
-
 if (gradle.startParameter.taskNames.contains("buildHealth")) {
     // Reasons to disabling by default:
     // The plugin schedules heavy LocateDependenciesTask tasks even without analysis
@@ -65,30 +55,11 @@ dependencies {
 }
 
 subprojects {
-    group = "com.avito.android"
-    version = finalProjectVersion
-
-    /**
-     * https://www.jetbrains.com/help/teamcity/build-script-interaction-with-teamcity.html#BuildScriptInteractionwithTeamCity-ReportingBuildNumber
-     */
-    val teamcityPrintVersionTask = tasks.register("teamcityPrintReleasedVersion") {
-        group = "publication"
-        description = "Prints teamcity service message to display released version as build number"
-
-        doLast {
-            logger.lifecycle("##teamcity[buildNumber '$finalProjectVersion']")
-        }
-    }
-
-    tasks.register(publishReleaseTaskName) {
-        group = "publication"
-        finalizedBy(teamcityPrintVersionTask)
-    }
 
     plugins.withType<AppPlugin> {
         configure<BaseExtension> {
             packagingOptions {
-                exclude("META-INF/*.kotlin_module")
+                pickFirst("META-INF/*.kotlin_module")
             }
         }
     }
@@ -115,7 +86,7 @@ subprojects {
                             }
                         }
                     }
-                    configureBintray(publishingVariant)
+//                    configureBintray(publishingVariant)
                 }
         }
     }
@@ -150,63 +121,11 @@ subprojects {
         }
     }
 
-    plugins.withType<KotlinBasePluginWrapper> {
-        this@subprojects.run {
-            tasks {
-                withType<KotlinCompile> {
-                    kotlinOptions {
-                        jvmTarget = javaVersion.toString()
-                        allWarningsAsErrors = true
-                        freeCompilerArgs = freeCompilerArgs + "-Xopt-in=kotlin.RequiresOptIn"
-                    }
-                }
-            }
-
-            dependencies {
-                add("implementation", Dependencies.kotlinStdlib)
-            }
-        }
-    }
-
-    plugins.withId("kotlin-android") {
-        configureJunit5Tests()
-    }
-
     // todo more precise configuration for gradle plugins, no need for gradle testing in common kotlin modules
     plugins.withId("kotlin") {
 
-        configureJunit5Tests()
-
         extensions.getByType<JavaPluginExtension>().run {
             withSourcesJar()
-        }
-
-        this@subprojects.tasks {
-            withType<Test> {
-                systemProperty(
-                    "kotlinVersion",
-                    plugins.getPlugin(KotlinPluginWrapper::class.java).kotlinPluginVersion
-                )
-                systemProperty("compileSdkVersion", compileSdk)
-                systemProperty("buildToolsVersion", buildTools)
-                systemProperty("androidGradlePluginVersion", androidGradlePluginVersion.get())
-
-                /**
-                 * IDEA добавляет специальный init script, по нему понимаем что запустили в IDE
-                 * используется в `:test-project`
-                 */
-                systemProperty(
-                    "isInvokedFromIde",
-                    gradle.startParameter.allInitScripts.find { it.name.contains("ijtestinit") } != null
-                )
-
-                systemProperty("isTest", true)
-
-                systemProperty(
-                    "junit.jupiter.execution.timeout.default",
-                    TimeUnit.MINUTES.toSeconds(10)
-                )
-            }
         }
 
         dependencies {
@@ -216,33 +135,8 @@ subprojects {
 
     plugins.withId("java-test-fixtures") {
         dependencies {
-            add("testFixturesImplementation", Dependencies.Test.junitJupiterApi)
-            add("testFixturesImplementation", Dependencies.Test.truth)
-        }
-    }
-
-    tasks.withType<Test> {
-        systemProperty("rootDir", "${project.rootDir}")
-
-        val testProperties = listOf(
-            "avito.kubernetes.url",
-            "avito.kubernetes.token",
-            "avito.kubernetes.cert",
-            "avito.kubernetes.namespace",
-            "avito.slack.test.channel",
-            "avito.slack.test.token",
-            "avito.slack.test.workspace",
-            "avito.elastic.endpoint",
-            "avito.elastic.indexpattern",
-            "teamcityBuildId"
-        )
-        testProperties.forEach { key ->
-            val property = if (project.hasProperty(key)) {
-                project.property(key)!!.toString()
-            } else {
-                ""
-            }
-            systemProperty(key, property)
+//            add("testFixturesImplementation", Dependencies.Test.junitJupiterApi)
+//            add("testFixturesImplementation", Dependencies.Test.truth)
         }
     }
 
@@ -252,47 +146,47 @@ subprojects {
         }
     }
 
-    plugins.withType<MavenPublishPlugin> {
-        extensions.getByType<PublishingExtension>().run {
-
-            publications {
-                // todo should not depend on ordering
-                if (plugins.hasPlugin("kotlin")) {
-                    val publicationName = "maven"
-
-                    register<MavenPublication>(publicationName) {
-                        from(components["java"])
-                        afterEvaluate {
-                            artifactId = this@subprojects.getOptionalExtra("artifact-id") ?: this@subprojects.name
-                        }
-                    }
-
-                    afterEvaluate {
-                        configureBintray(publicationName)
-                    }
-                }
-            }
-
-            repositories {
-                if (!artifactoryUrl.orNull.isNullOrBlank()) {
-                    maven {
-                        name = "artifactory"
-                        setUrl("${artifactoryUrl.orNull}/libs-release-local")
-                        credentials {
-                            username = project.getOptionalExtra("avito.artifactory.user")
-                            password = project.getOptionalExtra("avito.artifactory.password")
-                        }
-                    }
-                }
-            }
-        }
-
-        if (!artifactoryUrl.orNull.isNullOrBlank()) {
-            publishToArtifactoryTask.configure {
-                dependsOn(tasks.named("publishAllPublicationsToArtifactoryRepository"))
-            }
-        }
-    }
+//    plugins.withType<MavenPublishPlugin> {
+//        extensions.getByType<PublishingExtension>().run {
+//
+//            publications {
+//                // todo should not depend on ordering
+//                if (plugins.hasPlugin("kotlin")) {
+//                    val publicationName = "maven"
+//
+//                    register<MavenPublication>(publicationName) {
+//                        from(components["java"])
+//                        afterEvaluate {
+//                            artifactId = this@subprojects.getOptionalExtra("artifact-id") ?: this@subprojects.name
+//                        }
+//                    }
+//
+//                    afterEvaluate {
+//                        configureBintray(publicationName)
+//                    }
+//                }
+//            }
+//
+//            repositories {
+//                if (!artifactoryUrl.orNull.isNullOrBlank()) {
+//                    maven {
+//                        name = "artifactory"
+//                        setUrl("${artifactoryUrl.orNull}/libs-release-local")
+//                        credentials {
+//                            username = project.getOptionalExtra("avito.artifactory.user")
+//                            password = project.getOptionalExtra("avito.artifactory.password")
+//                        }
+//                    }
+//                }
+//            }
+//        }
+//
+//        if (!artifactoryUrl.orNull.isNullOrBlank()) {
+//            publishToArtifactoryTask.configure {
+//                dependsOn(tasks.named("publishAllPublicationsToArtifactoryRepository"))
+//            }
+//        }
+//    }
 }
 
 val Project.sourceSets: SourceSetContainer
@@ -309,73 +203,45 @@ fun Project.getOptionalExtra(key: String): String? {
     }
 }
 
-fun Project.configureBintray(vararg publications: String) {
-    extensions.findByType<BintrayExtension>()?.run {
-
-        // todo fail fast with meaningful error message
-        user = getOptionalExtra("avito.bintray.user")
-        key = getOptionalExtra("avito.bintray.key")
-
-        setPublications(*publications)
-
-        dryRun = false
-        publish = true
-        // You can use override for inconsistently uploaded artifacts
-        // Examples of issues:
-        // - NoHttpResponseException: api.bintray.com:443 failed to respond
-        //   (https://github.com/bintray/gradle-bintray-plugin/issues/325)
-        // - Could not upload to 'https://api.bintray.com/...':
-        //   HTTP/1.1 405 Not Allowed 405 Not Allowed405 Not Allowednginx
-        override = false
-        pkg(
-            closureOf<PackageConfig> {
-                repo = "maven"
-                userOrg = "avito"
-                name = "avito-android"
-                setLicenses("mit")
-                vcsUrl = "https://github.com/avito-tech/avito-android.git"
-
-                version(
-                    closureOf<VersionConfig> {
-                        name = finalProjectVersion
-                    }
-                )
-            }
-        )
-    }
-
-    tasks.named(publishReleaseTaskName).configure {
-        dependsOn(tasks.named("bintrayUpload"))
-    }
-}
-
-fun Project.configureJunit5Tests() {
-    dependencies {
-        add("testImplementation", Dependencies.Test.junitJupiterApi)
-
-        add("testRuntimeOnly", Dependencies.Test.junitPlatformRunner)
-        add("testRuntimeOnly", Dependencies.Test.junitPlatformLauncher)
-        add("testRuntimeOnly", Dependencies.Test.junitJupiterEngine)
-
-        add("testImplementation", Dependencies.Test.truth)
-
-        if (name != "truth-extensions") {
-            add("testImplementation", project(":subprojects:common:truth-extensions"))
-        }
-    }
-
-    tasks.withType<Test> {
-        useJUnitPlatform()
-        maxParallelForks = 8
-        failFast = true
-
-        /**
-         * fix for retrofit `WARNING: Illegal reflective access by retrofit2.Platform`
-         * see square/retrofit/issues/3341
-         */
-        jvmArgs = listOf("--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED")
-    }
-}
+//fun Project.configureBintray(vararg publications: String) {
+//    extensions.findByType<BintrayExtension>()?.run {
+//
+//        // todo fail fast with meaningful error message
+//        user = getOptionalExtra("avito.bintray.user")
+//        key = getOptionalExtra("avito.bintray.key")
+//
+//        setPublications(*publications)
+//
+//        dryRun = false
+//        publish = true
+//        // You can use override for inconsistently uploaded artifacts
+//        // Examples of issues:
+//        // - NoHttpResponseException: api.bintray.com:443 failed to respond
+//        //   (https://github.com/bintray/gradle-bintray-plugin/issues/325)
+//        // - Could not upload to 'https://api.bintray.com/...':
+//        //   HTTP/1.1 405 Not Allowed 405 Not Allowed405 Not Allowednginx
+//        override = false
+//        pkg(
+//            closureOf<PackageConfig> {
+//                repo = "maven"
+//                userOrg = "avito"
+//                name = "avito-android"
+//                setLicenses("mit")
+//                vcsUrl = "https://github.com/avito-tech/avito-android.git"
+//
+//                version(
+//                    closureOf<VersionConfig> {
+//                        name = finalProjectVersion
+//                    }
+//                )
+//            }
+//        )
+//    }
+//
+//    tasks.named(publishReleaseTaskName).configure {
+//        dependsOn(tasks.named("bintrayUpload"))
+//    }
+//}
 
 tasks.withType<Wrapper> {
     // sources unavailable with BIN until https://youtrack.jetbrains.com/issue/IDEA-231667 resolved
